--- a/budget.css
+++ b/budget.css
@@ -1,6 +1,5 @@
 main section.budgets {
   height: 100%;
- 
 }
 .budget-container {
   height: 100%;
@@ -55,4 +54,98 @@ main section.budgets {
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
+}
+
+.bar-container {
+  width: 100%;
+  position: relative;
+  border: 1px groove #9e9e9e;
+  border-radius: 2px;
+  -webkit-border-radius: 1px solid;
+  -moz-border-radius: 1px solid;
+  -ms-border-radius: 1px solid;
+  -o-border-radius: 1px solid;
+}
+.bar-container .label-content {
+  position: absolute;
+  right: 0px;
+  z-index: 2;
+  top: -2.2em;
+  content: "";
+  background-color: rgb(0, 164, 41);
+  color: #ffffff;
+  padding: 5px 8px;
+}
+.bar-container .label::before {
+  position: absolute;
+  content: "";
+  width: 50px;
+  height: 100%;
+  background-color: rgb(0, 164, 41);
+  top: 10px;
+  z-index: -1;
+  right: 0;
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%);
+}
+.bar-status.limited {
+  width: 40%;
+  background: linear-gradient(to left, #02c20f, rgb(0, 134, 60));
+}
+
+.bar-status {
+  width: 0px;
+  background: linear-gradient(to left, #02c20f, rgb(0, 134, 60));
+  height: 10px;
+}
+.bar-status.limit-exceed {
+  width: 100%;
+  background: linear-gradient(to left, #ff8000, red);
+}
+
+.set-budgeted-list li .budget-details .spent-box,
+.set-budgeted-list li .budget-details .remaining-box {
+  display: flex;
+  gap: 10px;
+}
+.text-container {
+  display: flex;
+  width: 100%;
+  justify-content: flex-start;
+  align-items: start;
+  position: relative;
+}
+
+.text-container .left-portion {
+  align-items: start !important;
+}
+
+.set-budgeted-container .set-budgeted-list li {
+  flex-direction: column;
+  gap: 10px;
+}
+.set-budgeted-list li .right-portion {
+  position: absolute;
+  right: 0;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  align-items: end;
+}
+.set-budgeted-container .set-budgeted-list {
+  gap: 25px;
+}
+.budgeted-categories{
+  padding: 10px;
+}
+
+.budget-container {
+  
+  padding-bottom: 8rem;
+  gap: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.spent-categories h3{
+  padding-left: 10px;
 }
