--- a/budget.css
+++ b/budget.css
@@ -152,7 +152,7 @@ main section.budgets {
   opacity: 0.7;
 }
 .budget-input-container {
-  padding: 15px 5px;
+  padding: 15px;
   position: absolute;
   display: flex;
   flex-direction: column;
