--- a/budget.css
+++ b/budget.css
@@ -58,6 +58,7 @@ main section.budgets {
 
 .bar-container {
   width: 100%;
+
   position: relative;
   border: 1px groove #9e9e9e;
   border-radius: 2px;
@@ -69,13 +70,13 @@ main section.budgets {
 .bar-container .label-content {
   position: absolute;
   right: 0px;
-  z-index: -1;
   top: -2.5em;
   content: "";
   background-color: rgb(0, 164, 41);
   color: #ffffff;
   padding: 5px 8px;
 }
+
 .bar-container .label::before {
   position: absolute;
   content: "";
@@ -83,7 +84,7 @@ main section.budgets {
   height: 100%;
   background-color: rgb(0, 164, 41);
   top: 10px;
-  z-index: -2;
+  z-index: -1;
   right: 0;
   clip-path: polygon(0% 0%, 100% 0%, 100% 100%);
 }
@@ -158,23 +159,24 @@ main section.budgets {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border-radius:10px ;
+  border-radius: 5px;
   content: "";
   width: 280px;
-  background-color: rgb(198, 193, 193);
+  background-color: rgb(255, 255, 255);
   color: #000000;
   top: 50%;
   gap: 20px;
+  overflow: hidden;
   left: 50%;
   transform: translate(-50%, -50%);
   -webkit-transform: translate(-50%, -50%);
   -moz-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   -o-transform: translate(-50%, -50%);
-  -webkit-border-radius:10px ;
-  -moz-border-radius:10px ;
-  -ms-border-radius:10px ;
-  -o-border-radius:10px ;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
 }
 @keyframes open {
   from {
@@ -186,10 +188,10 @@ main section.budgets {
     -o-transform: translate(-50%, -50%) scale(0);
   }
 }
-.budget-input-container.active{
+.budget-input-container.active {
   display: flex;
-  animation: open .3s ease;
-  -webkit-animation: open .3s ease;
+  animation: open 0.3s ease;
+  -webkit-animation: open 0.3s ease;
 }
 .budget-card .card-body {
   display: flex;
@@ -199,8 +201,8 @@ main section.budgets {
   align-items: center;
 }
 .budget-card .card-body img {
-  width:50px;
-  height:50px;
+  width: 50px;
+  height: 50px;
   border-radius: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
@@ -208,9 +210,69 @@ main section.budgets {
   -o-border-radius: 10px;
 }
 
-.budget-input-container .form-container{
+.budget-input-container .form-container {
   display: flex;
   margin-top: 5px;
   flex-direction: column;
   gap: 10px;
+}
+.budget-container.blur {
+  background: rgba(169, 169, 169, 0.715);
+  backdrop-filter: blur(10px);
+  transition: all 0.3s linear;
+  -webkit-transition: all 0.3s linear;
+  -moz-transition: all 0.3s linear;
+  -ms-transition: all 0.3s linear;
+  -o-transition: all 0.3s linear;
+}
+.budget-input-container header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+color: #ffff;
+}
+.budget-input-container::before,
+.budget-input-container::after {
+  content: "";
+  position: inherit;
+  width: 100px;
+  height: 100px;
+
+  z-index: -1;
+}
+.budget-input-container::before {
+  top: 0;
+  background: linear-gradient(    to bottom left,    rgb(25, 186, 255),    rgb(187, 0, 255)  );
+  border-radius: 0px 0px 20px 20px;
+  height: 93px;
+  left: 0;
+  width: 100%;
+  -webkit-border-radius: 0px 0px 20px 20px;
+  -moz-border-radius: 0px 0px 20px 20px;
+  -ms-border-radius: 0px 0px 20px 20px;
+  -o-border-radius: 0px 0px 20px 20px;
+  animation: down .5s ease;
+  -webkit-animation: down .5s ease;
+  transform-origin: center;
+}
+@keyframes down {
+  from{
+   width: 0%;
+   transform: translateX(150px);
+   -webkit-transform: translateX(150px);
+   -moz-transform: translateX(150px);
+   -ms-transform: translateX(150px);
+   -o-transform: translateX(150px);
+}
+}
+.budget-input-container::after {
+  top: 45px;
+  bottom: 0;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  border: 10px solid #ffff;
+  background: rgba(255, 255, 255, 0.715) !important;
 }
