--- a/budget.css
+++ b/budget.css
@@ -252,7 +252,7 @@ color: #ffff;
   -ms-border-radius: 0px 0px 20px 20px;
   -o-border-radius: 0px 0px 20px 20px;
   animation: openbg .5s ease;
-  -webkit-animation: openbg .5s ease;
+  -webkit-animation: openbg .7s ease;
   transform-origin: center;
 }
 @keyframes openbg {
@@ -275,4 +275,38 @@ color: #ffff;
   -o-border-radius: 50%;
   border: 10px solid #ffff;
   background: rgba(255, 255, 255, 0.715) !important;
+}
+
+.budget-operations{
+  position: absolute;
+  right: 0px;
+  z-index: 1;
+  top: 28px;
+  background-color: rgb(211, 211, 211);
+  width: 150px;
+  display: none;
+  flex-direction: column;
+  animation: down .3s ease;
+  -webkit-animation: down .3s ease;
+}
+.budget-operations p{
+  font-weight: 500;
+  padding: 10px;
+}
+.budget-operations p:hover{
+ 
+  background-color: #9e9e9e;
+}
+.budget-operations.active{
+  display: flex;
+}
+
+@keyframes down {
+  from {
+    transform: translateY(-20px) scale(0);
+    -webkit-transform: translateY(-20px) scale(0);
+    -moz-transform: translateY(-20px) scale(0);
+    -ms-transform: translateY(-20px) scale(0);
+    -o-transform: translateY(-20px) scale(0);
+  }
 }
