--- a/budget.css
+++ b/budget.css
@@ -282,20 +282,26 @@ color: #ffff;
   right: 0px;
   z-index: 1;
   top: 28px;
-  background-color: rgb(211, 211, 211);
+  background-color: rgb(225, 225, 225);
   width: 150px;
   display: none;
   flex-direction: column;
   animation: down .3s ease;
   -webkit-animation: down .3s ease;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
 }
 .budget-operations p{
   font-weight: 500;
+  border-radius: 5px;
   padding: 10px;
 }
 .budget-operations p:hover{
  
-  background-color: #9e9e9e;
+  background-color: #c9c9c9;
 }
 .budget-operations.active{
   display: flex;
