--- a/budget.css
+++ b/budget.css
@@ -152,7 +152,8 @@ main section.budgets {
 .opacity {
   opacity: 0.7;
 }
-.budget-input-container {
+.budget-input-container,
+.budget-edit-container {
   padding: 15px;
   position: absolute;
   display: none;
@@ -188,7 +189,8 @@ main section.budgets {
     -o-transform: translate(-50%, -50%) scale(0);
   }
 }
-.budget-input-container.active {
+.budget-input-container.active,
+.budget-edit-container.active {
   display: flex;
   animation: open 0.3s ease;
   -webkit-animation: open 0.3s ease;
@@ -210,7 +212,8 @@ main section.budgets {
   -o-border-radius: 10px;
 }
 
-.budget-input-container .form-container {
+.budget-input-container .form-container,
+.budget-edit-container .form-container {
   display: flex;
   margin-top: 5px;
   flex-direction: column;
@@ -225,14 +228,16 @@ main section.budgets {
   -ms-transition: all 0.3s linear;
   -o-transition: all 0.3s linear;
 }
-.budget-input-container header {
+.budget-input-container header,
+.budget-edit-container header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-color: #ffff;
+  color: #ffff;
 }
 .budget-input-container::before,
-.budget-input-container::after {
+.budget-edit-container::before,
+.budget-edit-container::after, .budget-input-container::after {
   content: "";
   position: inherit;
   width: 100px;
@@ -240,9 +245,14 @@ color: #ffff;
 
   z-index: -1;
 }
-.budget-input-container::before {
+.budget-input-container::before,
+.budget-edit-container::before {
   top: 0;
-  background: linear-gradient(    to bottom left,    rgb(25, 186, 255),    rgb(187, 0, 255)  );
+  background: linear-gradient(
+    to bottom left,
+    rgb(25, 186, 255),
+    rgb(187, 0, 255)
+  );
   border-radius: 0px 0px 20px 20px;
   height: 93px;
   left: 0;
@@ -251,21 +261,22 @@ color: #ffff;
   -moz-border-radius: 0px 0px 20px 20px;
   -ms-border-radius: 0px 0px 20px 20px;
   -o-border-radius: 0px 0px 20px 20px;
-  animation: openbg .5s ease;
-  -webkit-animation: openbg .7s ease;
+  animation: openbg 0.5s ease;
+  -webkit-animation: openbg 0.5s ease;
   transform-origin: center;
 }
 @keyframes openbg {
-  from{
-   width: 0%;
-   transform: translateX(150px);
-   -webkit-transform: translateX(150px);
-   -moz-transform: translateX(150px);
-   -ms-transform: translateX(150px);
-   -o-transform: translateX(150px);
+  from {
+    width: 0%;
+    transform: translateX(150px);
+    -webkit-transform: translateX(150px);
+    -moz-transform: translateX(150px);
+    -ms-transform: translateX(150px);
+    -o-transform: translateX(150px);
+  }
 }
-}
-.budget-input-container::after {
+.budget-input-container::after,
+.budget-edit-container::after {
   top: 45px;
   bottom: 0;
   border-radius: 50%;
@@ -277,7 +288,7 @@ color: #ffff;
   background: rgba(255, 255, 255, 0.715) !important;
 }
 
-.budget-operations{
+.budget-operations {
   position: absolute;
   right: 0px;
   z-index: 1;
@@ -286,24 +297,23 @@ color: #ffff;
   width: 150px;
   display: none;
   flex-direction: column;
-  animation: down .3s ease;
-  -webkit-animation: down .3s ease;
+  animation: down 0.3s ease;
+  -webkit-animation: down 0.3s ease;
   border-radius: 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
 }
-.budget-operations p{
+.budget-operations p {
   font-weight: 500;
   border-radius: 5px;
   padding: 10px;
 }
-.budget-operations p:hover{
- 
+.budget-operations p:hover {
   background-color: #c9c9c9;
 }
-.budget-operations.active{
+.budget-operations.active {
   display: flex;
 }
 
