--- a/home.css
+++ b/home.css
@@ -52,7 +52,7 @@
   width: 100%;
   align-items: center;
   margin-top: 10px;
-  padding: 20px;
+  padding: 15px;
 }
 .home-container .main-content .sub-content {
   display: flex;
@@ -61,12 +61,14 @@
   width: 100%;
   align-items: flex-start;
 }
+.added-day-info {
+  margin-bottom: 15px;
+}
 .transaction-history {
   display: flex;
   width: 100%;
   justify-content: center;
   align-items: center;
-  padding: 10px;
   flex-direction: column;
   gap: 20px;
 }
@@ -95,7 +97,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap:5px;
+  gap: 5px;
 }
 .transaction-history
   li
@@ -105,25 +107,26 @@
   display: flex;
   justify-content: center;
   align-items: center;
- gap: 10px;
+  gap: 10px;
 }
 .transaction-history
   li
   .transaction-info
   .cat-account
-  .transaction-account-info img {
- width: 20px;
- height: 20px;
- border-radius: 10px;
- -webkit-border-radius: 10px;
- -moz-border-radius: 10px;
- -ms-border-radius: 10px;
- -o-border-radius: 10px;
+  .transaction-account-info
+  img {
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
-.little-bold{
-    font-weight: 500;
-    font-size: 17px;
+.little-bold {
+  font-weight: 500;
+  font-size: 17px;
 }
-.transaction-amount{
-    padding-right: 10px;
+.transaction-amount {
+  padding-right: 10px;
 }
