--- a/home.css
+++ b/home.css
@@ -1,6 +1,11 @@
 .home-container {
   width: 100%;
-  margin-top: 20px;
+  height: 100%;
+  padding-top: 15px;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  padding-bottom: 140px;
 }
 .home-container header {
   width: 100%;
@@ -11,7 +16,9 @@
   gap: 20px;
 }
 .home-container header .left-arrow,
-.home-container header .right-arrow {
+.head-content .month-info .left-arrow,
+.home-container header .right-arrow,
+.head-content .month-info .right-arrow {
   width: 12px;
   height: 12px;
   background-color: transparent;
@@ -23,7 +30,17 @@
   -ms-transform: rotate(-46deg);
   -o-transform: rotate(-46deg);
 }
-.home-container header .right-arrow {
+.home-container header .balance-info .expense-box,
+.home-container header .balance-info .income-box,
+.home-container header .balance-info .total-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
+.home-container header .right-arrow,
+.head-content .month-info .right-arrow {
   transform: rotate(135deg);
   -webkit-transform: rotate(135deg);
   -moz-transform: rotate(135deg);
@@ -34,7 +51,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 20px;
+  gap: 30px;
 }
 .balance-info {
   display: flex;
@@ -50,6 +67,8 @@
   display: flex;
   justify-content: center;
   width: 100%;
+  flex-direction: column;
+  gap: 30px;
   align-items: center;
   margin-top: 10px;
   padding: 15px;
@@ -105,9 +124,9 @@
   .cat-account
   .transaction-account-info {
   display: flex;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
-  gap: 10px;
+  gap: 8px;
 }
 .transaction-history
   li
@@ -117,11 +136,11 @@
   img {
   width: 20px;
   height: 20px;
-  border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -o-border-radius: 10px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
 }
 .little-bold {
   font-weight: 500;
@@ -129,4 +148,25 @@
 }
 .transaction-amount {
   padding-right: 10px;
+}
+.amount.green {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+/* analysis page style */
+.analysis-container{
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: flex-start;
+}
+.analysis-container .chart{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 350px;
+  padding: 10px;
 }
