--- a/home.css
+++ b/home.css
@@ -179,6 +179,8 @@ gap: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 380px;
+  height:250px;
+  position: relative;
 
 }
+
