--- a/home.css
+++ b/home.css
@@ -180,7 +180,6 @@ gap: 20px;
   justify-content: center;
   align-items: center;
   height:250px;
-  position: relative;
-
+  padding: 0px 10px;
 }
 
