--- a/home.css
+++ b/home.css
@@ -158,9 +158,15 @@
 .transaction-amount {
   padding-right: 10px;
 }
-.amount.green {
+.amount.green,.amount.income {
   font-size: 18px;
   font-weight: 600;
+ color: green;
+}
+.amount.red,.amount.expense {
+  font-size: 18px;
+  font-weight: 600;
+  color:red;
 }
 
 /* analysis page style */
