--- a/home.css
+++ b/home.css
@@ -316,7 +316,123 @@
   .text-amount-bar
   .analysis-bar-container
   .analysis-bar {
-width: 70%;
-background-color: rgb(0, 116, 93);
+  width: 70%;
+  background-color: rgb(0, 116, 93);
+}
+.detail-view-container {
+  position: absolute;
+  width: 280px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+  border-radius: 5px;
+  overflow: hidden;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+.detail-view-container .card-top {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  background-color: rgb(0, 125, 0);
+  flex-grow: 1;
+  flex-direction: column;
+  width: 100%;
+  padding: 10px 10px 0px 10px;
+}
+.detail-view-container .card-top .center-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 5px;
+  width: 100%;
+}
+.detail-view-container .card-top .center-content + .date-time-details {
+  text-align: right;
+  width: 100%;
+  padding-right: 10px;
+}
+.detail-view-container .card-top .card-header {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+  margin-bottom: 10px;
+  padding: 5px;
+}
+.detail-view-container .card-top .card-header .card-operations {
+  display: flex;
+  gap: 25px;
+}
 
+.detail-view-container .card-top .center-content .category-name-detail {
+  font-size: 18px;
+  font-weight: 500;
+}
+.detail-view-container .card-top .center-content .respective-amount {
+  font-size: 30px;
+  font-weight: 500;
+}
+.detail-view-container .card-bottom {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(255, 255, 255);
+  color: black;
+  flex-grow: 1;
+  width: 100%;
+  padding: 10px;
+  flex-direction: column;
+  gap: 20px;
+}
+.detail-view-container .card-bottom ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  flex-direction: column;
+  gap: 10px;
+}
+.detail-view-container .card-bottom ul li {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  font-size: 17px;
+  font-weight: 500;
+}
+.detail-view-container .card-bottom ul li img {
+  width: 30px;
+  height: 30px;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+.detail-view-container .card-bottom ul li .detail-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 17px;
+  font-weight: 500;
+  border: 1px solid;
+  padding: 2px 10px;
+  gap: 10px;
+  border-radius:5px ;
+  -webkit-border-radius:5px ;
+  -moz-border-radius:5px ;
+  -ms-border-radius:5px ;
+  -o-border-radius:5px ;
 }
