--- a/home.css
+++ b/home.css
@@ -321,7 +321,7 @@
 }
 .detail-view-container {
   position: absolute;
-  width: 280px;
+  width: 300px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -361,6 +361,7 @@
 .detail-view-container .card-top .center-content + .date-time-details {
   text-align: right;
   width: 100%;
+  padding: 10px;
   padding-right: 10px;
 }
 .detail-view-container .card-top .card-header {
@@ -403,6 +404,7 @@
   width: 100%;
   flex-direction: column;
   gap: 10px;
+  padding: 5px 0px;
 }
 .detail-view-container .card-bottom ul li {
   display: flex;
@@ -428,11 +430,14 @@
   font-size: 17px;
   font-weight: 500;
   border: 1px solid;
-  padding: 2px 10px;
+  padding: 5px 10px;
   gap: 10px;
   border-radius:5px ;
   -webkit-border-radius:5px ;
   -moz-border-radius:5px ;
   -ms-border-radius:5px ;
   -o-border-radius:5px ;
+}
+.detail-view-container .card-bottom .notes {
+margin-bottom: 10px;
 }
