--- a/home.css
+++ b/home.css
@@ -321,9 +321,10 @@
 }
 .detail-view-container {
   position: absolute;
-  width: 300px;
+  width:100%;
   top: 50%;
   left: 50%;
+  padding: 0px 25px;
   transform: translate(-50%, -50%);
   -webkit-transform: translate(-50%, -50%);
   -moz-transform: translate(-50%, -50%);
