--- a/home.css
+++ b/home.css
@@ -321,7 +321,7 @@
 }
 .detail-view-container {
   position: absolute;
-  width:100%;
+  width:350px;
   top: 50%;
   left: 50%;
   padding: 0px 35px;
@@ -330,22 +330,33 @@
   -moz-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   -o-transform: translate(-50%, -50%);
-  display: flex;
+  display: none;
   justify-content: flex-start;
   align-items: flex-start;
   flex-direction: column;
-  border-radius: 5px;
+  border-radius: 7px;
   overflow: hidden;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  -ms-border-radius: 7px;
+  -o-border-radius: 7px;
+  animation: openViews .3s ease;
+  -webkit-animation: openViews .3s ease;
+}
+@keyframes openViews {
+  from{
+   opacity: 0;
+   top: 55%;
+}
+}
+.detail-view-container.active{
+  display: flex;
 }
 .detail-view-container .card-top {
   display: flex;
   justify-content: start;
   align-items: center;
-  background-color: rgb(0, 125, 0);
+  background-color: rgb(0, 145, 0);
   flex-grow: 1;
   flex-direction: column;
   width: 100%;
