--- a/home.css
+++ b/home.css
@@ -164,11 +164,17 @@
   font-weight: 600;
   color: green;
 }
+.incomeBg{
+ background-color: green;
+}
 .amount.red,
 .amount.expense {
   font-size: 18px;
   font-weight: 600;
   color: red;
+}
+.expenseBg {
+  background-color: red;
 }
 
 /* analysis page style */
@@ -319,18 +325,9 @@
   width: 70%;
   background-color: rgb(0, 116, 93);
 }
-.detail-view-container {
-  position: absolute;
-  width: 320px;
-  top: 50%;
-  left: 50%;
-
-  transform: translate(-50%, -50%);
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  -o-transform: translate(-50%, -50%);
-  display: none;
+.detail-view-container{
+  display: flex;
+  width: 300px;
   justify-content: flex-start;
   align-items: flex-start;
   flex-direction: column;
@@ -339,18 +336,20 @@
 }
 @keyframes openViews {
   from {
-    opacity: 0;
-    top: 55%;
-  }
+   opacity: 0;
+   transform: translateY(30px);
+   -webkit-transform: translateY(30px);
+   -moz-transform: translateY(30px);
+   -ms-transform: translateY(30px);
+   -o-transform: translateY(30px);
 }
-.detail-view-container.active {
-  display: flex;
 }
+
 .detail-view-container .card-top {
   display: flex;
   justify-content: start;
   align-items: center;
-  background-color: rgb(0, 145, 0);
+  
   flex-grow: 1;
   flex-direction: column;
   width: 100%;
@@ -360,6 +359,12 @@
   -moz-border-radius: 10px 10px 0px 0px;
   -ms-border-radius: 10px 10px 0px 0px;
   -o-border-radius: 10px 10px 0px 0px;
+}
+.detail-view-container .card-top.incomeBg{
+  background-color: green;
+}
+.detail-view-container .card-top.expenseBg{
+  background-color: red;
 }
 .detail-view-container .card-top .center-content {
   display: flex;
@@ -420,7 +425,7 @@
   width: 100%;
   flex-direction: column;
   gap: 10px;
-  padding: 5px 0px;
+  padding: 5px 5px;
 }
 .detail-view-container .card-bottom ul li {
   display: flex;
@@ -429,6 +434,11 @@
   width: 100%;
   font-size: 17px;
   font-weight: 500;
+}
+.detail-view-container .card-bottom ul li .accname,
+.detail-view-container .card-bottom ul li .catename
+{
+  width: 100px;
 }
 .detail-view-container .card-bottom ul li img {
   width: 30px;
@@ -445,6 +455,7 @@
   align-items: center;
   font-size: 17px;
   font-weight: 500;
+  flex-grow: 1;
   border: 1px solid;
   padding: 5px 10px;
   gap: 10px;
@@ -462,4 +473,24 @@
   overflow: hidden;
   overflow-y: scroll;
   scrollbar-width: none;
+}
+.parent-detail-view{
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.507);
+  
+  width: 100%;
+  height: 100%;
+  display:none;
+  justify-content: center;
+  align-items: center;
+}
+.parent-detail-view.active{
+  display: flex;
+  transition: background-color .3s linear ;
+  -webkit-transition: background-color .3s linear ;
+  -moz-transition: background-color .3s linear ;
+  -ms-transition: background-color .3s linear ;
+  -o-transition: background-color .3s linear ;
 }
