--- a/home.css
+++ b/home.css
@@ -503,3 +503,46 @@
   -ms-transition: background-color .3s linear ;
   -o-transition: background-color .3s linear ;
 }
+.add-item{
+  position: fixed;
+  width: 40px;
+  height: 40px;
+  background-color: rgb(231, 231, 231);
+  bottom: 70px;
+  right: 20px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+.add-item .plus{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.add-item .plus::before,.add-item .plus::after{
+  width: 60%;
+  background-color: rgb(0, 0, 0);
+  height: 3px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+  content: '';
+  -webkit-transform: translate(-50%,-50%);
+  -moz-transform: translate(-50%,-50%);
+  -ms-transform: translate(-50%,-50%);
+  -o-transform: translate(-50%,-50%);
+}
+.add-item .plus::after{
+ left: 20%;
+ transform: rotate(90deg);
+ -webkit-transform: rotate(90deg);
+ -moz-transform: rotate(90deg);
+ -ms-transform: rotate(90deg);
+ -o-transform: rotate(90deg);
+}
