--- a/home.css
+++ b/home.css
@@ -505,8 +505,8 @@
 }
 .add-item{
   position: fixed;
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   background-color: rgb(231, 231, 231);
   bottom: 70px;
   right: 20px;
@@ -525,7 +525,7 @@
   overflow: hidden;
 }
 .add-item .plus::before,.add-item .plus::after{
-  width: 60%;
+  width: 50%;
   background-color: rgb(0, 0, 0);
   height: 3px;
   position: absolute;
@@ -539,10 +539,10 @@
   -o-transform: translate(-50%,-50%);
 }
 .add-item .plus::after{
- left: 20%;
- transform: rotate(90deg);
- -webkit-transform: rotate(90deg);
- -moz-transform: rotate(90deg);
- -ms-transform: rotate(90deg);
- -o-transform: rotate(90deg);
+ left: 25%;
+ transform: rotate(90deg) translateX(-1px);
+ -webkit-transform: rotate(90deg) translateX(-1px);
+ -moz-transform: rotate(90deg) translateX(-1px);
+ -ms-transform: rotate(90deg) translateX(-1px);
+ -o-transform: rotate(90deg) translateX(-1px);
 }
